# OVNI

./: .gitignore  Makefile  README.md  base.py  docs.md  pyproject.toml  requirements.txt  test.py  test_image.py  test_image_2.py  test_video.py
examples/: caller.py
examples/media/: subtitles.ass
examples/scripts/: _get_caller.py  ass.py  blur.py  moving_image.py  rotate_image.py  rounded_image.py  shadow.py  vignette.py
kernels/: __init__.py
ovni/: __init__.py  base.py  config.py  ctx.py  utils.py
ovni/ass/: __init__.py  lib.py  renderer.py
ovni/kernels/: __init__.py  blocks.py  loader.py
ovni/kernels/compiled/: all_kernels.ptx
ovni/kernels/src/: all_kernels.cu  blur.cu  filter.cu  gaussian_blur.cu  interpolation.cu  libass.cu  pixfmt.cu  scale_translate.cu  transform.cu  warp.cu
ovni/libass/: __init__.py  lib.py  renderer.py
ovni/ops/: __init__.py  blur.py  filter.py  interpolation.py  libass.py  pixfmt.py  transform.py  utils.py
pynvc_patched/PyNvVideoCodec_2.0.0/: CMakeLists.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
pynvc_patched/PyNvVideoCodec_2.0.0/src/: CMakeLists.txt
pynvc_patched/PyNvVideoCodec_2.0.0/src/NvEncVersionCheck/: CMakeLists.txt  pyproject.toml  setup.py
pynvc_patched/PyNvVideoCodec_2.0.0/src/NvEncVersionCheck/VersionCheck/: NvEncVersionCheck.cpp  NvEncoder.h  __init__.py  nvEncodeAPI_120.h
pynvc_patched/PyNvVideoCodec_2.0.0/src/PyNvVideoCodec/: CMakeLists.txt
pynvc_patched/PyNvVideoCodec_2.0.0/src/VideoCodecSDKUtils/: CMakeLists.txt
pynvc_patched/PyNvVideoCodec_2.0.0/src/cmake/: ffmpeg.cmake
(+65 files in other folders)
