[project]
name = "ovni"
version = "0.1.1"
description = "Optimized Video Native Interface"
authors = [{ name = "billythegoat356", email = "billythegoat356@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

# NOTE: Install a precompiled version of cupy depending on your version of the CUDA toolkit (see README)
dependencies = [
    "numpy==2.2.6",
    "pycuda==2025.1.1",
    "PyNvVideoCodec==2.0.1",
    "pillow==11.2.1",
    "opencv-python==4.11.0.86"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ovni*"]

[tool.setuptools.package-data]
ovni = ["kernels/compiled/*.ptx"]
